force-app/main/default/objects/Student__c/fields/Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Amount_New__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>