force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HYDERABAD</fullName>
                <label>hyderabad</label>
            </value>
            <value>
                <fullName>BANGLORE</fullName>
            </value>
            <value>
                <fullName>CHENNAI</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>NEWYORK</fullName>
            </value>
            <value>
                <fullName>SAN FRANCISCO</fullName>
            </value>
            <value>
                <fullName>LONDON</fullName>
            </value>
            <value>
                <fullName>LIVERPOOL</fullName>
            </value>
            <value>
                <fullName>CAMBRIDGE</fullName>
            </value>
            <value>
                <fullName>MELBOURNE</fullName>
            </value>
            <value>
                <fullName>SYDNEY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>