force-app/main/default/objects/Student__c/fields/College_Detail__c.field-meta.xml
<CustomField>
    <fullName>College_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College Detail</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Students Data</relationshipLabel>
    <relationshipName>Students_Data</relationshipName>
    <type>Lookup</type>
</CustomField>