force-app/main/default/objects/Student__c/recordTypes/College_Details.recordType-meta.xml
<RecordType>
    <fullName>College_Details</fullName>
    <active>true</active>
    <description>This is used to store college Details</description>
    <label>College Details</label>
</RecordType>