force-app/main/default/objects/Student__c/recordTypes/Student_Details.recordType-meta.xml
<RecordType>
    <fullName>Student_Details</fullName>
    <active>true</active>
    <description>This is used to store student Details</description>
    <label>Student Details</label>
</RecordType>